# trainlens

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  live-notebook-cells.md  plugin-authoring.md  report-sections.md  roadmap.md  visual-explanations.md
examples/: basic_usage.py  live_dashboard_export.py  pytorch_loop_metrics.py  visual_explanations.py
notebooks/: README.md  clip_contrastive_report.ipynb  llm_finetune_report.ipynb  vlm_projector_report.ipynb
src/trainlens/: __init__.py  notebook.py  pipeline.py
src/trainlens/analyzers/: __init__.py  base.py  metrics.py  registry.py  traces.py  training.py
src/trainlens/heuristics/: __init__.py  balance.py  features.py  foundation.py  metrics.py
src/trainlens/introspection/: __init__.py  frameworks.py  inspector.py  models.py
src/trainlens/llm/: __init__.py  config.py  enhancer.py  llm7.py  openai_compatible.py  prompts.py  provider.py
src/trainlens/magic/: __init__.py  commands.py  extension.py
src/trainlens/models/: __init__.py  analysis.py  metric.py  run.py  snapshot.py  trace.py
src/trainlens/renderers/: __init__.py  atlas.py  markdown.py  rich.py  visual.py
src/trainlens/storage/: __init__.py  (+1 more)
tests/: test_atlas_renderer.py  test_foundation.py  test_heuristics.py  test_introspection.py  test_magic.py  test_metrics.py  test_notebook.py  test_pipeline.py  test_prompts.py  test_renderer.py  test_storage.py  test_traces.py  test_visual_renderer.py
tools/: trainlens_llm7.py  trainlens_openai_compatible.py
